--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -35,6 +35,6 @@
         </div>
         
     </div>
-    <script src="main.js"></script>
+    <script src="milestone2.js"></script>
 </body>
 </html>
